# esp32_web_provisioning

./: CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  intf_wifi.c  intf_wifi.h  main.c
main/app/: app.h  app_connection.c  app_connection.h  app_webserver.c  app_webserver.h
main/services/: service.h  service_webserver.c  service_webserver.h
main/wifi/: intf_wifi.c  intf_wifi.h
web/: index.html  script.js  style.css
